--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mi Proyecto React</title>
-    <link rel="icon" href="/vite.svg" type="image/svg+xml" />
+    <title>Frontend App</title>
   </head>
   <body>
-    <div id="root"></div>  <!-- Aquí React montará la aplicación -->
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-
-
